Fix select dropdown options being unreadable in dark mode
Adds color-scheme: inherit to select elements so the dropdown
options inherit the page's color scheme, fixing white-on-white
text in dark mode.

Regression from 65b216353e.

Fixes https://github.com/mastodon/mastodon/issues/37332

--- a/app/javascript/styles/mastodon/forms.scss
+++ b/app/javascript/styles/mastodon/forms.scss
@@ -663,6 +663,9 @@ code {
     padding-inline-end: 30px;
     height: 41px;
 
+    // Fix dropdown options being white-on-white in dark mode (issue #37332)
+    color-scheme: inherit;
+
     @media screen and (width <= 600px) {
       font-size: 16px;
     }
